hphp/test/zend/good/tests/classes/abstract_redeclare.php.expectf

Fatal error: Class fail contains an abstract method and must therefore be declared abstract in %s/abstract_redeclare.php on line 9
